--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					<div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Project</h2>
                         <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4">I was at a Summer coding camp where I learned how create a ping-pong game using Scratch. I did many projects through out the computer science class that I have registered for my college semester.</p>
+                        <p class="text-white-75 mb-4">I have created an online ping-pong game using Scratch. I individually created a hangman game using Eclipse. Banking project using Java synchronization mechanisms (semaphores and deadlock) and how to prevent them. Linux kernel module project using Linux kernel to modify the operating system. My partner and I created a computer simulation called simpletron using C programming. My Capstone class is creating a website for our college’s Department of Chemistry using Visual Studio code to create a web-based application conjunct with SQL database. This application monitor spectral changes in structure between protein-DNA interactions (https://cdspeccollab.smcm.edu/). My other Capstone classcreated a website for Greenwell. The Greenwell website has a MySQL workbench database connected to it. The whole website exists in Visual Studio. I have created a bird tracker website with geojson files database project in HTML with jQuery and JavaScript. The Penguin game project is a group project in our game design class. The pizza ordering software was a group project in our software engineering class. </p>
                         <a class="btn btn-primary btn-xl" href="#Work Experience">My computer Work Experience!</a>
 					</div>
 				</div>
@@ -119,7 +119,7 @@
                         <h2 class="mt-0">Let's Get In Touch!</h2>
                         <hr class="divider" />
                         <p class="text-muted mb-5">Ready to start your next project with us? Send us a messages and we will get back to you as soon as possible!</p>
-                    </div>
+                    </div
                 </div>
                 <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
                     <div class="col-lg-6">
