--- a/index.html
+++ b/index.html
@@ -99,13 +99,18 @@
             </div>
 		</section>
 		<!--Work Experience-->
+		<style>
+		#Work Experience{
+		background-color:#006600;
+		}
+		</style>
 		<section class="page-section" id="Work Experience">
             <div class="container px-4 px-lg-5">
 				<div class="row gx-4 gx-lg-5 justify-content-center">
 					<div class="col-lg-8 text-center">
-                        <h2 class="text-black mt-0">Work Experience</h2>
+                        <h2 class="text-white mt-0">Work Experience</h2>
                         <hr class="divider divider-light" />
-                        <p class="text-black-75 mb-4"> </p>
+                        <p class="text-white-75 mb-4"> </p>
                         <a class="btn btn-primary btn-xl" href="#contact">My computer Contact!</a>
 					</div>
 				</div>
