--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		</section>
 		<!--Work Experience-->
 		<style>
-		#Work Experience{
+		#Work%20Experience{
 		background-color:#006600;
 		}
 		</style>
