--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#Skills">Skills</a></li>
                         <li class="nav-item"><a class="nav-link" href="#project">Project</a></li>
-						<li class="nav-item"><a class="nav-link" href="#Work Experience">Work Experience</a></li>
+						<li class="nav-item"><a class="nav-link" href="#WorkExperience">Work Experience</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -100,11 +100,11 @@
 		</section>
 		<!--Work Experience-->
 		<style>
-		#Work%20Experience{
+		#WorkExperience{
 		background-color:#006600;
 		}
 		</style>
-		<section class="page-section" id="Work Experience">
+		<section class="page-section" id="WorkExperience">
             <div class="container px-4 px-lg-5">
 				<div class="row gx-4 gx-lg-5 justify-content-center">
 					<div class="col-lg-8 text-center">
