--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 					<div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Work Experience</h2>
                         <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4"> </p>
+                        <p class="text-white-75 mb-4">I volunteered to work as a Customer Service Specialist, Howard County Library System from July-Aug 2019. The specific tasks include shelving and organizing books, cleaning the shelf, examining damages, unauthorized markings and writing, and putting missing books in the correct location, etc. Project Access Summer Program, Howard Community College is a program that teaches and trains high school students about the proper way to get ready for college in May-August 2016. I was a student Aide, River Hill High School from Aug. 2014- May 2018. My helper and I helped organize the school supplies and school student information. I also helped teachers set up and troubleshoot a PowerPoint presentation/projector. I also helped guide visitors/parents during school-wide activities. I Helped students with classwork and homework in science classes.</p>
                         <a class="btn btn-primary btn-xl" href="#contact">My computer Contact!</a>
 					</div>
 				</div>
