--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                         <li class="nav-item"><a class="nav-link" href="#Skills">Skills</a></li>
                         <li class="nav-item"><a class="nav-link" href="#project">Project</a></li>
 						<li class="nav-item"><a class="nav-link" href="#WorkExperience">Work Experience</a></li>
+						<li class="nav-item"><a class="nav-link" href="#SchoolOrganizations">School Organizations</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -116,7 +117,26 @@
 				</div>
             </div>
         </section>
-        <!-- Contact-->
+		
+		<!--School organizations-->
+		<style>
+		#WorkExperience{
+		background-color:#800020;
+		}
+		</style>
+		<section class="page-section" id="SchoolOrganizations">
+            <div class="container px-4 px-lg-5">
+				<div class="row gx-4 gx-lg-5 justify-content-center">
+					<div class="col-lg-8 text-center">
+                        <h2 class="text-white mt-0">School Organizations</h2>
+                        <hr class="divider divider-light" />
+                        <p class="text-white-75 mb-4"></p>
+                        <a class="btn btn-primary btn-xl" href="#contact">My computer Contact!</a>
+					</div>
+				</div>
+            </div>
+        </section>		
+		<!-- Contact-->
         <section class="page-section" id="contact">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
