--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 		
 		<!--School organizations-->
 		<style>
-		#WorkExperience{
+		#SchoolOrganizations{
 		background-color:#800020;
 		}
 		</style>
