--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					<div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">School Organizations</h2>
                         <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4"></p>
+                        <p class="text-white-75 mb-4">I was a Member of the Videogame Club, SMCM Club, where we can bring any gaming consoles to the club to play games for fun in 2018-present. I am an associate member, Best Buddies, River Hill High School, and SMCM has many fun activities with people who have some disability in 2014-present. This Best Buddies program offered social mentoring for people with and without intellectual and developmental disabilities (IDD) while improving the quality of life and level of inclusion for a population that is often isolated and excluded. I joined two sports teams in high school for students with a disability for fun. I was a part of the allied soccer team, River Hill High School school program that we practiced kicking the ball after school. We have to play an actual soccer game at our school or the opponent school in Aug 2014- May 2018. I also joined Allied Bowling Team, River Hill High School, where the bowling team goes on a bus that drives us to an actual bowling alley to practice bowling. I earned the Varsity Athlete Award Recipient; Scholar-Athlete Award Recipient for allied soccer and allied bowling.</p>
                         <a class="btn btn-primary btn-xl" href="#contact">My computer Contact!</a>
 					</div>
 				</div>
