--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <h2 class="text-white mt-0">About</h2>
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-4">I am a Saint Marys College of Maryland learner with a major in computer science. I am working on getting a Bachelor of Science in Computer Science in my college. I have many high schools award. I earned them during my high school education. The Awards are Honor Roll Recipient Winter 2016-2017, Academic Award for 11th Grade English 11, and Perfect Attendance Award 2014-15. The Relative computer science classes I have taken during the college semester are Calculus 1 and 2, Data Structures and Algorithms, Computer Architecture/C Programming, Operating Systems, Programming languages, Coding Interview Practicum, Software Startup Simulator Capstone. The college required me to take an international language to graduate, so I took Intermediate Chinese 1. I can only speak conversational Spanish, conversational Chinese. I learned some Japanese from anime, but  I can't speak conversational Japanese with the Japanese language.</p>
-                        <a class="btn btn-primary btn-xl" href="#Skills">My computer skills!</a>
+                        <a class="btn btn-primary btn-xl" href="#Skills">My skills!</a>
                     </div>
                 </div>
             </div>
@@ -76,7 +76,7 @@
                         <h2 class="text-white mt-0">Skills</h2>
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-4">I am proficient in Microsoft Word, PowerPoint, Excel, and Google Classroom app. I learned to code programs with Scratch, Java/Eclipse, and Alice. I know how to use HTML, JavaScript, jQuery, Python, Ajax, Bootstrap, Stylesheet/CSS, and ASP.net MVC to create and maintain websites. I learned how to use Mapbox API. I learned how to use iMovie to edit films. I learned how to use a camera/video camera to gather footage for the film or video. I can use the computer to do video recording and editing. I can use Microsoft PowerPoint and the projector. I learned how to use Premiere Pro for video editing.</p>
-                        <a class="btn btn-primary btn-xl" href="#project">My computer Project!</a>
+                        <a class="btn btn-primary btn-xl" href="#project">My Project!</a>
                 </div>
 				</div>	
             </div>
@@ -94,7 +94,7 @@
                         <h2 class="text-white mt-0">Project</h2>
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-4">I have created an online ping-pong game using Scratch. I individually created a hangman game using Eclipse. Banking project using Java synchronization mechanisms (semaphores and deadlock) and how to prevent them. Linux kernel module project using Linux kernel to modify the operating system. My partner and I created a computer simulation called simpletron using C programming. My Capstone class is creating a website for our college’s Department of Chemistry using Visual Studio code to create a web-based application conjunct with SQL database. This application monitor spectral changes in structure between protein-DNA interactions (https://cdspeccollab.smcm.edu/). My other Capstone classcreated a website for Greenwell. The Greenwell website has a MySQL workbench database connected to it. The whole website exists in Visual Studio. I have created a bird tracker website with geojson files database project in HTML with jQuery and JavaScript. The Penguin game project is a group project in our game design class. The pizza ordering software was a group project in our software engineering class. </p>
-                        <a class="btn btn-primary btn-xl" href="#Work Experience">My computer Work Experience!</a>
+                        <a class="btn btn-primary btn-xl" href="#Work Experience">My Work Experience!</a>
 					</div>
 				</div>
             </div>
@@ -112,7 +112,7 @@
                         <h2 class="text-white mt-0">Work Experience</h2>
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-4">I volunteered to work as a Customer Service Specialist, Howard County Library System from July-Aug 2019. The specific tasks include shelving and organizing books, cleaning the shelf, examining damages, unauthorized markings and writing, and putting missing books in the correct location, etc. Project Access Summer Program, Howard Community College is a program that teaches and trains high school students about the proper way to get ready for college in May-August 2016. I was a student Aide, River Hill High School from Aug. 2014- May 2018. My helper and I helped organize the school supplies and school student information. I also helped teachers set up and troubleshoot a PowerPoint presentation/projector. I also helped guide visitors/parents during school-wide activities. I Helped students with classwork and homework in science classes.</p>
-                        <a class="btn btn-primary btn-xl" href="#contact">My computer Contact!</a>
+                        <a class="btn btn-primary btn-xl" href="#SchoolOrganizations">My School Organizations!</a>
 					</div>
 				</div>
             </div>
