--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
                 </div>
                 <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
                     <div class="col-lg-6">
-                       <p class="text-muted mb-5">Here aremy email kittyacat@gmail.com </p>
+                       <p class="text-muted mb-5">Here is my personal email kittyacat@gmail.com</p>
+					   <p class="text-muted mb-5">Here is my school email kmli@smcm.edu</p>
                     </div>
                 </div>
                 <div class="row gx-4 gx-lg-5 justify-content-center">
