--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 						<a href="https://github.com/Kathryn2354/ChemistryWebsite">chemistry website code</a>	
 						<a href="https://github.com/Kathryn2354/GreenwellWebsite">code for greenwell website in github</a>
 						<a href="https://github.com/Kathryn2354/Mapbox-02">code for Mapbox remake of bird project</a>
+						<a href="https://arielcwebster.github.io/Game-Design-2021/">link to all gamedesign class games</a>
 						<a class="btn btn-primary btn-xl" href="#WorkExperience">My Work Experience!</a>
 					</div>
 				</div>
