--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                         <a href="https://cdspeccollab.smcm.edu/">chemistry website</a>	
 						<a href="https://github.com/Kathryn2354/ChemistryWebsite">chemistry website code</a>	
 						<a href="https://github.com/Kathryn2354/GreenwellWebsite">greenwell website code</a>
+						<a href="https://github.com/Kathryn2354/Mapbox-02">mapbox pratice code</a>
 						<a href="https://arielcwebster.github.io/Game-Design-2021/">gamedesign games</a>
 						<a class="btn btn-primary btn-xl" href="#WorkExperience">My Work Experience!</a>
 					</div>
