--- a/index.html
+++ b/index.html
@@ -96,9 +96,11 @@
                         <p class="text-white-75 mb-4">I have created an online ping-pong game using Scratch. I individually created a hangman game using Eclipse. Banking project using Java synchronization mechanisms (semaphores and deadlock) and how to prevent them. Linux kernel module project using Linux kernel to modify the operating system. My partner and I created a computer simulation called simpletron using C programming. My Capstone class is creating a website for our college’s Department of Chemistry using Visual Studio code to create a web-based application conjunct with SQL database. This application monitor spectral changes in structure between protein-DNA interactions (https://cdspeccollab.smcm.edu/). My other Capstone classcreated a website for Greenwell. The Greenwell website has a MySQL workbench database connected to it. The whole website exists in Visual Studio. I have created a bird tracker website with geojson files database project in HTML with jQuery and JavaScript. The Penguin game project is a group project in our game design class. The pizza ordering software was a group project in our software engineering class. </p>
                         <a href="https://cdspeccollab.smcm.edu/">chemistry website</a>	
 						<a href="https://github.com/Kathryn2354/ChemistryWebsite">chemistry website code</a>	
+						<a href="https://github.com/Kathryn2354/chemistry_remake">chemistry website remake with ASP.NET code</a>
 						<a href="https://github.com/Kathryn2354/GreenwellWebsite">greenwell website code</a>
 						<a href="https://github.com/Kathryn2354/Mapbox-02">mapbox pratice code</a>
 						<a href="https://arielcwebster.github.io/Game-Design-2021/">gamedesign games</a>
+						
 						<a class="btn btn-primary btn-xl" href="#WorkExperience">My Work Experience!</a>
 					</div>
 				</div>
